--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,18 +12,21 @@ env:
   USER_ID: ${{secrets.USER_ID}}
   TX: ${{secrets.TX}}
 jobs:
-  # Setup
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-go@v2
-        with:
-          go-version: ^1.13
-        id: go
-  # Run
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ^1.13
+      - name: cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
       - name: Test
         run: go test ./...
